[gd_scene load_steps=9 format=3 uid="uid://ccgfgge83aa30"]

[ext_resource type="Script" path="res://scripts/player_car.gd" id="1_y52h2"]
[ext_resource type="PackedScene" uid="uid://h6s1pft6onyh" path="res://assets/Models/PlayerCar/CarSteering.glb" id="3_4gkjd"]
[ext_resource type="PackedScene" uid="uid://dqvou37cbdasj" path="res://assets/Models/PlayerCar/CarDashboard.glb" id="3_60i3h"]

[sub_resource type="Animation" id="Animation_g210b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4uxea"]
resource_name = "TurnLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.610865, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_72c0i"]
resource_name = "TurnRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.610865, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kg3k1"]
_data = {
"RESET": SubResource("Animation_g210b"),
"TurnLeft": SubResource("Animation_4uxea"),
"TurnRight": SubResource("Animation_72c0i")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_1h12o"]
size = Vector3(2.21509, 1, 1.04736)

[node name="PlayerCar" type="Node3D" node_paths=PackedStringArray("cam_anim_player")]
script = ExtResource("1_y52h2")
cam_anim_player = NodePath("CarDashboard/CarSteering/AnimationPlayer")

[node name="CarDashboard" parent="." instance=ExtResource("3_60i3h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.463797, 0.823403, 0)

[node name="CarSteering" parent="CarDashboard" instance=ExtResource("3_4gkjd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.108177, 0.0372455, -0.236369)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CarDashboard/CarSteering"]
libraries = {
"": SubResource("AnimationLibrary_kg3k1")
}
speed_scale = 2.0

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.71299, 0, 0)
collision_layer = 8
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0793457, 0.493, 0)
shape = SubResource("BoxShape3D_1h12o")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
